external/zlib-1.3.1/configure.log
--------------------
./configure --prefix=/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot --static
Wed Jan 28 01:43:00 PM EST 2026
=== ztest2021441.c ===
extern int getchar();
int hello() {return getchar();}
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c ztest2021441.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest2021441.c ===
int foo() { return 0; }
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include ztest2021441.c

Building static library libz.a version 1.3.1 with /home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc.

=== ztest2021441.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include ztest2021441.c
Checking for size_t... Yes.

=== ztest2021441.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -D_LARGEFILE64_SOURCE=1 ztest2021441.c
ztest2021441.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
    2 | off64_t dummy = 0;
      | ^~~~~~~
      | off_t
/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include/sys/types.h:22:14: note: 'off_t' declared here
   22 | typedef long off_t;
      |              ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest2021441.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -o ztest2021441 ztest2021441.c
ztest2021441.c:3:3: error: call to undeclared function 'fseeko'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    3 |   fseeko(NULL, 0, 0);
      |   ^
ztest2021441.c:3:3: note: did you mean 'fseek'?
/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include/stdio.h:59:5: note: 'fseek' declared here
   59 | int fseek(FILE *stream, long offset, int whence);
      |     ^
1 error generated.
(exit code 1)
Checking for fseeko... No.

=== ztest2021441.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO -o ztest2021441 ztest2021441.c
Checking for strerror... Yes.

=== ztest2021441.c ===
#include <unistd.h>
int main() { return 0; }
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO ztest2021441.c
Checking for unistd.h... Yes.

=== ztest2021441.c ===
#include <stdarg.h>
int main() { return 0; }
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO ztest2021441.c
Checking for stdarg.h... Yes.

=== ztest2021441.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO ztest2021441.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest2021441.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO -o ztest2021441 ztest2021441.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest2021441.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO ztest2021441.c
Checking for return value of vsnprintf()... Yes.

=== ztest2021441.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
/home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc -c -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO ztest2021441.c
Checking for attribute(visibility) support... Yes.

ALL = static
AR = llvm-ar
ARFLAGS = rc
CC = /home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc
CFLAGS = -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -DNO_FSEEKO -DHAVE_HIDDEN
CPP =
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = /home/cwatkins/repos/cw/oxide_os/toolchain/bin/oxide-cc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = llvm-ranlib
SFLAGS = -O2 -fPIC -I/home/cwatkins/repos/cw/oxide_os/toolchain/sysroot/include -fPIC -DNO_FSEEKO -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.3.1
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /home/cwatkins/repos/cw/oxide_os/toolchain/sysroot
sharedlibdir = ${libdir}
uname = Linux
--------------------


